Fix missing spaces in names between citations

--- a/app/assets/stylesheets/tree.css.scss
+++ b/app/assets/stylesheets/tree.css.scss
@@ -262,3 +262,9 @@
   }
 
 }
+
+//clean up names with citation elsewhere
+citation::before {
+  content: ' ';
+}
+
